# RubiksCubeSolver

./: CMakeLists.txt  main.cpp
Model/: Model3D.cpp  RubiksCube.cpp  RubiksCube.h  bitBoard.cpp
codeBaseDB/: PatternDatabase.cpp  PatternDatabase.h  buildCornerDB.cpp  buildCornerDB.h  cornerPatternDB.cpp  cornerPatternDB.h  math.cpp  math.h  nibbleArray.cpp  nibbleArray.h  permutationIndexer_BlackBox.h
graphSolvers/: BFS.h  DFS.h  IDA*.h  IDDFS.h
